--- a/static-pages/css/styles.css
+++ b/static-pages/css/styles.css
@@ -79,11 +79,44 @@ html {
   cursor: pointer;
 }
 
+.breadcrumbs__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.breadcrumbs__item {
+  color: #555555;
+}
+
+.breadcrumbs__item:last-child {
+  color: #c4c4cc;
+}
+
+.breadcrumbs__item:last-child svg {
+  display: none;
+}
+
+.breadcrumbs__item-svg {
+  width: 10px;
+  height: 10px;
+  margin: 0 5px 0 6px;
+  fill: #9d9d9d;
+}
+
+.page {
+  padding-top: 72px;
+}
+
 .header {
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
+  z-index: 999;
 }
 
 .header__content {
@@ -198,8 +231,8 @@ html {
   padding-top: 3px;
 }
 
-.header__form-bar-icon {
-  fill: #000000;
+.header__form-search-icon {
+  fill: #003c96;
   position: absolute;
   right: 16px;
   top: 10px;
@@ -261,6 +294,250 @@ html {
   margin-right: 16px;
   height: 20px;
   width: 20px;
+}
+
+.catalog__breadcrumbs {
+  padding-top: 21px;
+}
+
+.catalog__slider {
+  margin: 20px 0;
+}
+
+.catalog__slider:hover .owl-theme .owl-nav [class*=owl-] {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.catalog__slider .owl-theme .owl-nav [class*=owl-] {
+  background: #ffffff;
+  color: #003c96;
+  font-size: 3.5rem;
+  padding: 0;
+  width: 54px;
+  height: 54px;
+  border-radius: 50%;
+  display: none;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.catalog__slider .owl-theme .owl-nav [class*=owl-]:hover {
+  background: #99b1d5;
+  color: #ffffff;
+}
+
+.catalog__slider .owl-prev {
+  position: absolute;
+  top: 35%;
+  left: 20px;
+}
+
+.catalog__slider .owl-prev span {
+  -webkit-transform: translate(-1px, -2px);
+          transform: translate(-1px, -2px);
+}
+
+.catalog__slider .owl-next {
+  position: absolute;
+  top: 35%;
+  right: 20px;
+}
+
+.catalog__slider .owl-next span {
+  -webkit-transform: translate(0px, -2px);
+          transform: translate(0px, -2px);
+}
+
+.catalog__slider .owl-dots {
+  position: absolute;
+  bottom: 7px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+
+.catalog__grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(240px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  -ms-grid-columns: (minmax(230px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
+  margin-bottom: 40px;
+}
+
+.catalog__grid-item {
+  min-height: 198px;
+  border-radius: 4px;
+  color: #555;
+  border: 1px solid #e6e6e6;
+}
+
+.catalog__grid-item:hover {
+  -webkit-box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1);
+  z-index: 1;
+}
+
+.catalog__grid-card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 32px 18px 25px;
+  cursor: pointer;
+}
+
+.catalog__grid-img {
+  margin-bottom: 16px;
+}
+
+.catalog__grid-title {
+  font-weight: 500;
+  line-height: 1.2;
+  text-align: center;
+}
+
+.footer__content {
+  background: #f9f9f9;
+  border-radius: 8px;
+  margin: 0 auto 25px;
+  padding: 44px 46px 36px;
+}
+
+.footer__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 20px;
+}
+
+.footer__list-item {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 0 24px 0 40px;
+  background-color: #f6f6f6;
+}
+
+.footer__list-item:last-child {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 440px;
+          flex: 0 0 440px;
+}
+
+.footer__list-title {
+  padding: 0;
+  padding-top: 2px;
+  border: none;
+  text-transform: none;
+  color: #555;
+  font-weight: 700;
+  margin: 0 0 5px;
+}
+
+.footer__list-title:hover {
+  color: #003c96;
+}
+
+.footer__list-link {
+  font-size: 17px;
+  color: #555;
+  line-height: 1.33;
+  border-bottom: none;
+  padding: 7px 0;
+  text-decoration: none;
+}
+
+.footer__list-link:hover {
+  color: #003c96;
+}
+
+.footer__app {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 15px;
+}
+
+.footer__app-btn {
+  text-decoration: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 38px;
+  border-radius: 26px;
+  font-size: 12px;
+  font-weight: 500;
+  color: #111;
+  text-transform: none;
+  background-color: transparent;
+  border: 1px solid #e6e6e6;
+  min-width: 124px;
+  max-width: 124px;
+  -webkit-transition: border-color .2s;
+  transition: border-color .2s;
+}
+
+.footer__app-btn:hover {
+  border-color: #555;
+}
+
+.footer__mobile-app-icon {
+  margin-right: 12px;
+}
+
+.footer__mobile-app-icon--store {
+  fill: #000;
+}
+
+.footer__social {
+  margin-top: 40px;
+  text-align: center;
+  color: #555;
+  font-weight: 700;
+}
+
+.footer__social-nav {
+  margin-top: 20px;
+}
+
+.footer__social-link {
+  text-decoration: none;
+}
+
+.footer__social-icon {
+  width: 36px;
+  height: 36px;
+  margin: 0 10px;
 }
 
 #spread-svg {
