bootstrap filter and product's card

--- a/static-pages/css/styles.css
+++ b/static-pages/css/styles.css
@@ -79,6 +79,40 @@ html {
   cursor: pointer;
 }
 
+.navbtn {
+  all: initial;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 44px;
+  min-width: 121px;
+  max-width: 250px;
+  padding: 0 11px;
+  margin: 0 10px 0 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  cursor: pointer;
+  border: 1px solid #e6e6e6;
+  border-radius: 4px;
+  font-size: 14px;
+  color: #555;
+  font-family: 'Gilroy',Arial,'Helvetica Neue',Helvetica,sans-serif;
+}
+
+.navbtn__svg {
+  fill: #9d9d9d;
+  margin-right: 10px;
+}
+
+.navbtn__dropdown-icon {
+  position: relative;
+  right: 10px;
+  z-index: -1;
+}
+
 .breadcrumbs__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -105,6 +139,331 @@ html {
   height: 10px;
   margin: 0 5px 0 6px;
   fill: #9d9d9d;
+}
+
+.btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  height: 100%;
+  color: #ffffff;
+  border: none;
+  background: transparent;
+  border-radius: 26px;
+  outline: none;
+  cursor: pointer;
+}
+
+.filter__card {
+  padding: 16px;
+  border-radius: 4px;
+  border: 1px solid #e6e6e6;
+  margin-bottom: 16px;
+  width: 100%;
+}
+
+.filter__header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 0 18px;
+  border-bottom: 1px solid #e6e6e6;
+}
+
+.filter__header-img {
+  width: 57px;
+  margin-right: 16px;
+}
+
+.filter__title {
+  font-weight: 500;
+  line-height: 1.4;
+  color: #555;
+  margin-top: 16px;
+  font-family: 'Gilroy',Arial,'Helvetica Neue',Helvetica,sans-serif;
+  cursor: pointer;
+}
+
+.filter__title--head {
+  margin-top: 0;
+}
+
+.filter__title:hover {
+  color: #64c8ff;
+}
+
+.filter__nav {
+  padding-left: 16px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.filter__nav-link {
+  line-height: 1.3;
+  text-decoration: none;
+  color: #7b7b7b;
+  font-family: 'Gilroy',Arial,'Helvetica Neue',Helvetica,sans-serif;
+  margin-top: 14px;
+}
+
+.filter__nav-link:hover {
+  color: #003c96;
+}
+
+.filter__card-top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  font-weight: 500;
+  color: #555;
+}
+
+.filter__card-name {
+  width: auto;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin-right: 8px;
+}
+
+.filter__card-top-right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.filter__card-badge {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 5px 10px;
+  margin: 0 10px 0 0;
+  background-color: #f5f5f5;
+  text-decoration: none;
+  font-size: 15px;
+  color: #9d9d9d;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+.filter__range-counter {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 20px;
+}
+
+.filter__input {
+  width: 106px;
+  height: 44px;
+  padding: 12px 14px;
+  border-radius: 4px;
+  border: 1px solid #e6e6e6;
+  background: #fff;
+  color: #555;
+  font-size: 17px;
+}
+
+.filter__checkbox-label {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 16px;
+  line-height: 23px;
+  text-transform: capitalize;
+  color: #7b7b7b;
+  margin-top: 16px;
+}
+
+.filter__checkbox-input {
+  display: none;
+}
+
+.filter__checkbox-input:checked + span svg {
+  display: block;
+}
+
+.filter__checkbox-icon {
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+  border: 2px solid #c4c4c4;
+  margin-right: 15px;
+}
+
+.filter__checkbox-svg {
+  fill: #003c96;
+  width: 18px;
+  height: 18px;
+  -webkit-transform: translate(-2px, -2px);
+          transform: translate(-2px, -2px);
+  display: none;
+}
+
+.filter__checkbox-count {
+  font-size: 14px;
+  margin-left: 6px;
+}
+
+.filter__show-more {
+  padding: 5px 0;
+  font-size: 14px;
+  color: #003c96;
+  cursor: pointer;
+  margin-top: 16px;
+}
+
+.filter__show-more:hover {
+  color: #64c8ff;
+}
+
+.card {
+  z-index: 0;
+  min-height: 252px;
+  width: 280px;
+  border: 1px solid #e6e6e6;
+  padding: 10px;
+}
+
+.card__img-link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-decoration: none;
+  margin-bottom: 12px;
+}
+
+.card__title {
+  font-size: 14px;
+  line-height: 1.2;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  height: 52px;
+  color: #111111;
+}
+
+.card__rating {
+  margin: 0 8px 0 0;
+  color: #9d9d9d;
+  font-weight: 400;
+  font-size: 10px;
+  margin: 8px 0 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 18px;
+}
+
+.card__prices {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  font-size: 10px;
+  color: #9d9d9d;
+  text-transform: uppercase;
+  margin-top: 8px;
+}
+
+.card__price-big {
+  font-size: 18px;
+  font-weight: 700;
+  color: #111111;
+}
+
+.card__price-big--old {
+  color: #9d9d9d;
+  font-size: 16px;
+  font-weight: 300;
+}
+
+.card__price-small {
+  font-size: 10px;
+  font-weight: 700;
+  color: #111111;
+  vertical-align: super;
+  margin: 0 0 0 2px;
+}
+
+.card__price-small--old {
+  color: #9d9d9d;
+  font-size: 10px;
+  font-weight: 300;
+}
+
+.card__price-icon {
+  font-weight: 400;
+  font-size: 18px;
+  color: #111111;
+}
+
+.card__price-icon--old {
+  color: #9d9d9d;
+  font-size: 16px;
+  font-weight: 300;
+}
+
+.card__buttons {
+  margin-top: 20px;
+}
+
+.card__btn {
+  background: #003c96;
+  height: 32px;
+  margin-bottom: 4px;
 }
 
 .page {
@@ -408,6 +767,68 @@ html {
   font-weight: 500;
   line-height: 1.2;
   text-align: center;
+}
+
+.category {
+  position: relative;
+}
+
+.category__title {
+  color: #111111;
+  font-weight: 700;
+  font-size: 2rem;
+  margin-bottom: 20px;
+}
+
+.category__nav-btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-item-align: center;
+      align-self: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 13px;
+}
+
+.category__left-btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  display: none;
+  gap: 15px;
+}
+
+.category__right-btn {
+  position: absolute;
+  right: 0;
+  top: -5px;
+}
+
+.category__right-btn select {
+  all: initial;
+  width: 100%;
+}
+
+.category__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.category__filter {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 266px;
+          flex: 0 0 266px;
+  width: 266px;
+  margin-right: 16px;
+}
+
+.category__products {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 
 .footer__content {
