--- a/static-pages/css/styles.scss
+++ b/static-pages/css/styles.scss
@@ -73,6 +73,33 @@ html {
   cursor: pointer;
 }
 
+.navbtn {
+  all: initial;
+  display: flex;
+  align-items: center;
+  height: 44px;
+  min-width: 121px;
+  max-width: 250px;
+  padding: 0 11px;
+  margin: 0 10px 0 0;
+  box-sizing: border-box;
+  cursor: pointer;
+  border: 1px solid #e6e6e6;
+  border-radius: 4px;
+  font-size: 14px;
+  color: #555;
+  font-family: 'Gilroy',Arial,'Helvetica Neue',Helvetica,sans-serif;
+  &__svg {
+    fill: #9d9d9d;
+    margin-right: 10px;
+  }
+  &__dropdown-icon {
+    position: relative;
+    right: 10px;
+    z-index: -1;
+  }
+}
+
 .breadcrumbs {
   &__list {
     display: flex;
@@ -92,6 +119,249 @@ html {
     height: 10px;
     margin: 0 5px 0 6px;
     fill: #9d9d9d;
+  }
+}
+
+//BTN
+.btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  color: #ffffff;
+  border: none;
+  background: transparent;
+  border-radius: 26px;
+  outline: none;
+  cursor: pointer;
+}
+
+//FILTER
+.filter {
+
+  &__card {
+    padding: 16px;
+    border-radius: 4px;
+    border: 1px solid #e6e6e6;
+    margin-bottom: 16px;
+    width: 100%;
+  }
+  &__header {
+    display: flex;
+    align-items: center;
+    padding: 0 0 18px;
+    border-bottom: 1px solid #e6e6e6;
+  }
+  &__header-img {
+    width: 57px;
+    margin-right: 16px;
+  }
+  &__title {
+    font-weight: 500;
+    line-height: 1.4;
+    color: #555;
+    margin-top: 16px;
+    font-family: 'Gilroy',Arial,'Helvetica Neue',Helvetica,sans-serif;
+    cursor: pointer;
+    &--head {
+      margin-top: 0;
+    }
+    &:hover {
+      color: #64c8ff; 
+    }
+  }
+  &__nav {
+    padding-left: 16px;
+    display: flex;
+    flex-direction: column;
+  }
+  &__nav-link {
+    line-height: 1.3;
+    text-decoration: none;
+    color: #7b7b7b;
+    font-family: 'Gilroy',Arial,'Helvetica Neue',Helvetica,sans-serif;
+    margin-top: 14px;
+    &:hover {
+      color: #003c96;
+    }
+  }
+  &__card-top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-weight: 500;
+    color: #555;
+  }
+  &__card-name {
+    width: auto;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin-right: 8px;
+  }
+  &__card-top-right {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+  }
+  &__card-badge {
+      display: flex;
+      align-items: center;
+      padding: 5px 10px;
+      margin: 0 10px 0 0;
+      background-color: #f5f5f5;
+      text-decoration: none;
+      font-size: 15px;
+      color: #9d9d9d;
+      border-radius: 6px;
+      cursor: pointer;
+  }
+  &__range-counter {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 20px;
+  }
+  &__input {
+    width: 106px;
+    height: 44px;
+    padding: 12px 14px;
+    border-radius: 4px;
+    border: 1px solid #e6e6e6;
+    background: #fff;
+    color: #555;
+    font-size: 17px;
+  }
+  &__checkbox-label {
+    display: inline-flex;
+    align-items: center;
+    font-size: 16px;
+    line-height: 23px;
+    text-transform: capitalize;
+    color: #7b7b7b;
+    margin-top: 16px;
+  }
+  &__checkbox-input {
+    display: none;
+    &:checked + span svg{
+      display: block;
+    }
+  }
+  &__checkbox-icon {
+    display: inline-block;
+    width: 18px;
+    height: 18px;
+    border: 2px solid #c4c4c4;
+    margin-right: 15px;
+  }
+  &__checkbox-svg {
+    fill: #003c96; 
+    width: 18px; 
+    height: 18px;
+    transform: translate(-2px, -2px);
+    display: none;
+  }
+  &__checkbox-count {
+    font-size: 14px;
+    margin-left: 6px;
+  }
+  &__show-more {
+    padding: 5px 0;
+    font-size: 14px;
+    color: #003c96;
+    cursor: pointer;
+    margin-top: 16px;
+    &:hover {
+      color: #64c8ff;
+    }
+  }
+}
+
+//CARD
+.card {
+  z-index: 0;
+  min-height: 252px;
+  // width: calc(25% - 16px);
+  // min-width: 160px;
+  width: 280px;
+  border: 1px solid #e6e6e6;
+  padding: 10px;
+  &__img-link {
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
+    margin-bottom: 12px;
+  }
+  &__title {
+    font-size: 14px;
+    line-height: 1.2;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    height: 52px;
+    color: #111111;
+  }
+  &__rating {
+    margin: 0 8px 0 0;
+    color: #9d9d9d;
+    font-weight: 400;
+    font-size: 10px;
+    margin: 8px 0 0;
+    display: flex;
+    align-items: center;
+    margin-bottom: 18px;
+  }
+  &__prices {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    font-size: 10px;
+    color: #9d9d9d;
+    text-transform: uppercase;
+    margin-top: 8px;
+  }
+  &__price-big {
+    font-size: 18px;
+    font-weight: 700;
+    color: #111111;
+    &--old {
+      color: #9d9d9d;
+      font-size: 16px;
+      font-weight: 300;
+    }
+  }
+  &__price-small {
+    font-size: 10px;
+    font-weight: 700;
+    color: #111111;
+    vertical-align: super;
+    margin: 0 0 0 2px;
+    &--old {
+      color: #9d9d9d;
+      font-size: 10px;
+      font-weight: 300;
+    }
+  }
+  &__price-icon {
+    font-weight: 400;
+    font-size: 18px;
+    color: #111111;
+    &--old {
+      color: #9d9d9d;
+      font-size: 16px;
+      font-weight: 300;
+    }
+  }
+  &__buttons {
+    margin-top: 20px;
+  }
+  &__btn {
+    background: #003c96;
+    height: 32px;
+    margin-bottom: 4px;
   }
 }
 
@@ -338,6 +608,49 @@ html {
   }
 }
 
+//CATEGORY
+.category {
+  position: relative;
+  &__title {
+    color: #111111;
+    font-weight: 700;
+    font-size: 2rem;
+    margin-bottom: 20px;
+  }
+  &__nav-btn {
+    display: flex;
+    align-self: center;
+    justify-content: space-between;
+    margin-bottom: 13px;
+  }
+  &__left-btn {
+    display: flex;
+    display: none;
+    gap: 15px;
+  }
+  &__right-btn {
+    position: absolute;
+    right: 0;
+    top: -5px;
+    select {
+      all: initial;
+      width: 100%;
+    }
+  }
+  &__content {
+    display: flex;
+
+  }
+  &__filter {
+    flex: 0 0 266px;
+    width: 266px;
+    margin-right: 16px;
+  }
+  &__products {
+    flex: 1;
+  }
+}
+
 // FOOTER
 .footer {
 
@@ -433,6 +746,8 @@ html {
     margin: 0 10px;
   }
 }
+
+
 
 
 
