--- a/static-pages/css/styles.scss
+++ b/static-pages/css/styles.scss
@@ -135,11 +135,77 @@ html {
   border-radius: 26px;
   outline: none;
   cursor: pointer;
+  
+  &__icon {
+    width: 31.45px;
+    height: 32px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    &--detail {
+      width: 44px;
+      height: 44px;
+    }
+    &:hover {
+      background: #0b77c7;
+    }
+  }
+  &__input {
+    width: calc(100% - 62.9px);
+    height: 26px;
+    border: none;
+    outline: none;
+    color: #fff;
+    font-size: 14px;
+    background: #3363ab;
+    border-radius: 8px;
+    transition: opacity .3s ease-out;
+    text-align: center;
+    font-weight: 300;
+    font-family: 'Gilroy',Arial,'Helvetica Neue',Helvetica,sans-serif;
+    &--detail {
+      width: calc(100% - 90px);
+      height: 36px;
+    }
+    &::placeholder {
+      color: #ffffff;
+      font-size: 14px;
+    }
+    &:focus::placeholder {
+      color: transparent;
+    }
+  }
+  &__control-icon {
+    
+    width: 11.45px;
+    height: 11.45px;
+    
+  }
+  &:hover {
+    background: #0b77c7;
+  }
+  &--control {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    &:hover {
+      background: #003c96;
+    } 
+  }
 }
 
 //FILTER
 .filter {
-
+  
+  &__inner {
+    @media screen and (max-width: 1024px) {
+      background: #ffffff;
+      width: 95%;
+      height: 80vh;
+      overflow-y: scroll;
+    }
+  }
   &__card {
     padding: 16px;
     border-radius: 4px;
@@ -152,10 +218,40 @@ html {
     align-items: center;
     padding: 0 0 18px;
     border-bottom: 1px solid #e6e6e6;
+    @media screen and (max-width: 1024px) {
+      display: none;
+    }
   }
   &__header-img {
     width: 57px;
     margin-right: 16px;
+  }
+  &__header-mobile {
+    display: flex;
+    display: none;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 1.33;
+    margin: 0;
+    //padding: 24px 54px 24px 24px;
+    padding: 24px 5px 24px 0;
+    color: #111111;
+    border-bottom: 1px solid #e6e6e6;
+    @media screen and (max-width: 1024px) {
+      display: flex;
+    }
+  }
+  &__close-icon {
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #e0e3f1;
+    cursor: pointer;
   }
   &__title {
     font-weight: 500;
@@ -282,11 +378,25 @@ html {
 .card {
   z-index: 0;
   min-height: 252px;
-  // width: calc(25% - 16px);
-  // min-width: 160px;
-  width: 280px;
+  //width: 280px;
   border: 1px solid #e6e6e6;
   padding: 10px;
+  position: relative;
+  &:hover {
+    box-shadow: 0 4px 15px rgba(0, 0, 0,.1);
+    z-index: 1;
+  }
+  &__slider {
+    //flex: 1.5;
+    width: 424px;
+    //padding-right: 24px;
+  }
+  &__info {
+    //flex: 2;
+    //width: 65%;
+    border-left: 1px solid #e6e6e6;
+    padding-left: 24px;
+  }
   &__img-link {
     display: flex;
     justify-content: center;
@@ -303,6 +413,17 @@ html {
     -webkit-box-orient: vertical;
     height: 52px;
     color: #111111;
+    &--detail {
+    margin: 0 0 3px;
+    font-size: 26px;
+    //font-family: Gilroy,Arial,Helvetica Neue,Helvetica,sans-serif;
+    line-height: 1.33;
+    font-weight: 400;
+    // text-overflow: ellipsis;
+    color: #555;
+    min-height: 72px;
+    
+    }
   }
   &__rating {
     margin: 0 8px 0 0;
@@ -313,6 +434,25 @@ html {
     display: flex;
     align-items: center;
     margin-bottom: 18px;
+    &--detail {
+      font-size: 14px;
+    }
+  }
+  &__rating-icon {
+    fill: #fcb500;
+    width: 10px;
+    height: 10px;
+    margin-left: 10px;
+  }
+  &__rating-value {
+    color: #fcb500;
+    margin-left: 3px;
+  }
+  &__wrap-prices {
+    //width: 240px;
+    display: flex;
+    gap: 24px;
+
   }
   &__prices {
     display: flex;
@@ -322,6 +462,11 @@ html {
     color: #9d9d9d;
     text-transform: uppercase;
     margin-top: 8px;
+    &--detail {
+      flex-direction: column-reverse;
+      align-items: flex-start;
+      gap: 3px;
+    }
   }
   &__price-big {
     font-size: 18px;
@@ -331,6 +476,18 @@ html {
       color: #9d9d9d;
       font-size: 16px;
       font-weight: 300;
+    }
+    &--old-detail {
+      color: #9d9d9d;
+      font-family: Gilroy,Arial,'Helvetica Neue',Helvetica,sans-serif;
+      font-weight: 400;
+      font-size: 24px;
+    }
+    &--detail {
+      color: #111;
+      font-family: Gilroy,Arial,Helvetica Neue,Helvetica,sans-serif;
+      font-weight: 700;
+      font-size: 32px;
     }
   }
   &__price-small {
@@ -344,6 +501,19 @@ html {
       font-size: 10px;
       font-weight: 300;
     }
+    &--old-detail {
+      color: #9d9d9d;
+      font-family: Gilroy,Arial,'Helvetica Neue',Helvetica,sans-serif;
+      font-weight: 400;
+      font-size: 14px;
+      position: relative;
+      bottom: 4px;
+    }
+    &--detail {
+      position: relative;
+      bottom: 6px;
+      font-size: 14px;
+    }
   }
   &__price-icon {
     font-weight: 400;
@@ -354,6 +524,17 @@ html {
       font-size: 16px;
       font-weight: 300;
     }
+    &--old-detail {
+      color: #9d9d9d;
+      font-family: Gilroy,Arial,'Helvetica Neue',Helvetica,sans-serif;
+      font-weight: 400;
+      font-size: 24px;
+    }
+    &--detail {
+      font-size: 30px;
+      font-family: Gilroy,Arial,'Helvetica Neue',Helvetica,sans-serif;
+      font-weight: 400;
+    }
   }
   &__buttons {
     margin-top: 20px;
@@ -362,6 +543,43 @@ html {
     background: #003c96;
     height: 32px;
     margin-bottom: 4px;
+    &--detail {
+      width: 150px;
+      height: 44px;
+      font-size: 14px;
+    }
+  }
+  &__description {
+    color: #111111;
+    line-height: 1.5;
+    margin-top: 35px;
+  }
+  &__percent {
+    position: absolute;
+    height: 18px;
+    width: 38px;
+    padding: 2px 4px;
+    font-size: 12px;
+    font-weight: 500;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #fa5051;
+    border-radius: 4px;
+    left: 10px;
+    top: 10px;
+  }
+  &__favorite-icon {
+    fill: #fff;
+    stroke-width: 1;
+    stroke: #9d9d9d;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    &:hover {
+      stroke: #ff2b12;
+    }
   }
 }
 
@@ -384,6 +602,9 @@ html {
     border-radius: 4px;
     font-weight: 500;
     position: relative;
+    @media screen and (max-width: 768px) {
+      padding-bottom: 50px;
+    }
   }
   &__inner {
     min-height: 72px;
@@ -391,6 +612,7 @@ html {
     align-items: center;
     justify-content: space-between;
     color: #ffffff;
+    
   }
   &__form {
     height: 36px;
@@ -399,6 +621,11 @@ html {
     border-radius: 20px ;
     color: #fff;
     width: 60%;
+    @media screen and (max-width: 768px) {
+      position: absolute;
+      top: 70px;
+      width: 91%;
+    }
   }
   &__form-control {
     border-radius: 20px 0 0 20px;
@@ -624,36 +851,151 @@ html {
     margin-bottom: 13px;
   }
   &__left-btn {
-    display: flex;
+    //display: flex;
     display: none;
     gap: 15px;
+    @media screen and (max-width: 1024px) {
+      display: flex;
+    }
+    @media screen and (max-width: 450px) {
+      gap: 0;
+    }
   }
   &__right-btn {
     position: absolute;
     right: 0;
     top: -5px;
+    @media screen and (max-width: 450px) {
+      display: none;
+    }
+    &--mobile {
+      justify-content: center;
+      min-width: 40px;
+      max-width: 40px;
+      display: none;
+      @media screen and (max-width: 450px) {
+        display: flex;
+      }
+    }
     select {
       all: initial;
       width: 100%;
     }
+    @media screen and (max-width: 1024px) {
+      position: initial;
+    }
   }
   &__content {
+    position: relative;
     display: flex;
+    @media screen and (max-width: 1024px) {
+      display: initial;
+    }
 
   }
   &__filter {
-    flex: 0 0 266px;
+    //flex: 0 0 266px;
     width: 266px;
     margin-right: 16px;
+    @media screen and (max-width: 1024px) {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      width: 100%;
+      background: rgba(0, 0, 0,.6);
+      //padding: 30px;
+      z-index: 9999;
+      display: flex;
+      display: none;
+      justify-content: center;
+      //align-items: center;
+      padding-top: 20px;
+
+
+    }
   }
   &__products {
     flex: 1;
   }
+  &__inner-prods {
+    margin-left: -8px;
+    margin-right: -8px;
+    display: flex;
+    flex-wrap: wrap;
+    @media screen and (max-width: 768px) {
+      margin-left: -4px;
+      margin-right: -4px;
+    }
+  }
+  &__product-item {
+    width: 25%;
+    padding:0 8px 16px 8px;
+    @media screen and (max-width: 768px) {
+      width: 33.333%;
+      padding:0 4px 8px 4px;
+    }
+    @media screen and (max-width: 520px) {
+      width: 50%;
+    }
+    @media screen and (max-width: 375px) {
+      width: 100%;
+    }
+  }
+}
+
+//DETAIL
+.detail {
+  &__card {
+    display: flex;
+    margin-top: 21px;
+    padding: 24px;
+    padding-left: 0;
+    &:hover {
+      z-index: 0;
+      box-shadow: none;
+    }
+  }
+  &__description {
+    margin-top: 21px;
+    margin-bottom: 40px;
+    padding: 24px;
+    &:hover {
+      box-shadow: none;
+      
+    }
+  }
+  &__description-title {
+    padding-top: 13px;
+    padding-bottom: 13px;
+    margin-bottom: 40px;
+    color: #111111;
+    font-size: 17px;
+    border-bottom: 1px solid #e6e6e6;
+  }
+  &__list-item {
+    display: flex;
+    align-items: flex-end;
+    margin-bottom: 26px;
+  }
+  &__list-name {
+    width: 300px;
+    display: flex;
+    color: #9d9d9d;
+    align-items: flex-end;
+    margin-right: 6px;
+  }
+  &__bar {
+    border-bottom: 1px solid #e6e6e6;
+    flex: 1;
+  }
+  
 }
 
 // FOOTER
 .footer {
-
+  //display: none;
   &__content {
     background: #f9f9f9;
     border-radius: 8px;
@@ -662,6 +1004,7 @@ html {
   } 
   &__list {
     display: flex;
+    flex-wrap: wrap;
     gap: 20px;
   }
   &__list-item {
@@ -672,6 +1015,12 @@ html {
     background-color: #f6f6f6;
     &:last-child {
       flex: 0 0 440px;
+      @media screen and (max-width: 1150px) {
+        flex: none;
+        width: 100%;
+        text-align: center;
+        padding-top: 20px;
+      }
     }
   }
   &__list-title {
@@ -701,6 +1050,11 @@ html {
     display: flex;
     justify-content: space-between;
     margin-top: 15px;
+    @media screen and (max-width: 540px) {
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
+    }
   }
   &__app-btn {
     text-decoration: none;
@@ -754,3 +1108,174 @@ html {
 #spread-svg {
   display: none;
 }
+
+
+
+
+
+.slider {
+   //width:730px; margin:0 auto;
+   width: 400px;
+   position: relative;
+}
+
+// .bx-wrapper {
+//   height: 400px;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+
+//   li {
+//     float: none; 
+//     list-style: none;
+//     position: relative;
+//     width: 390px;
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//   }
+// }
+
+// .bx-pager img {
+//   width: 80px;
+// }
+
+.bx-wrapper {
+  margin-bottom: 40px;
+  li {
+    //float: none!important;
+    text-align: center;
+    padding-left: 100px;
+  }
+  img {
+    display: block;
+    max-width: 100%;
+    // padding-left: 40px;
+    // padding-right: 40px;
+    height: 400px;
+  }
+}
+
+.bx-pager {
+  display: flex;
+  justify-content: center;
+  a {
+    //width: 80px;
+    //margin: 0 6px;
+    display: flex;
+    justify-content: center;
+    border: 1px solid transparent;
+    width: 72px;
+    height: 80px;
+    border-radius: 4px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    &.active {
+      border: 1px solid #003c96;
+    }
+  }
+  img {
+    display: block;
+    max-width: 100%;
+    max-height: 100%;
+  }
+}
+
+// a {
+//   display:inline-block; 
+//   border:0; 
+//   padding:5px 6px; 
+//   padding-bottom:0px !important; 
+//   margin-bottom:50px;
+  
+// }
+a.active {
+  //display:inline-block; 
+  // border:1px solid red; 
+  // border: 1px solid #003c96;
+  // padding:5px;
+  // padding-bottom:0px !important; 
+  // margin-bottom:50px;
+}
+
+.bx-controls-direction {
+
+  a {
+    position: relative;
+    width: 40px;
+    height: 40px;
+    //border-radius: 50%;
+    //border: 1px solid red;
+    // border-radius: 50%;
+    //overflow: hidden;
+    text-decoration: none;
+    
+
+  }
+  .bx-prev {
+    
+    position: absolute;
+    bottom: 17px;
+    left: 18px;
+    padding-top: 11px;
+    &:hover::after {
+      background-color: #007aff;
+      color: #fff;
+    }
+  }
+  .bx-next {
+    //z-index: 0;
+    position: absolute;
+    bottom: 17px;
+    right: 18px;
+    padding-top: 11px;
+    &:hover::after {
+      background-color: #007aff;
+      color: #fff;
+    }
+  }
+
+  .bx-next:after {
+    content: "\203A";
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    font-size: 3rem;
+    background-color: #fff;
+    color: #003c96;
+    border-radius: 50%;
+    box-shadow: 0 0 8px #000;
+    box-shadow: 0 4px 15px rgba(0,0, 0,.15);
+  }
+  .bx-prev:after {
+    content: "\2039";
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    font-size: 3rem;
+    background-color: #fff;
+    color: #003c96;
+    border-radius: 50%;
+    box-shadow: 0 4px 15px rgba(0,0, 0,.15);
+  }
+}
+
+// .bx-controls-direction {
+//   display: flex;
+//   justify-content: space-between;
+//   padding-right: 24px;
+//   position: absolute;
+//   right: -10px;
+//   left: 0;
+//   bottom: 10px;
+// }
