--- a/static-pages/css/styles.css
+++ b/static-pages/css/styles.css
@@ -3,19 +3,87 @@ http://meyerweb.com/eric/tools/css/reset/
 v2.0 | 20110126
 License: none (public domain)
 */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
   margin: 0;
   padding: 0;
   border: 0;
@@ -25,8 +93,17 @@ time, mark, audio, video {
 }
 
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
   display: block;
 }
 
@@ -34,16 +111,20 @@ body {
   line-height: 1;
 }
 
-ol, ul {
+ol,
+ul {
   list-style: none;
 }
 
-blockquote, q {
+blockquote,
+q {
   quotes: none;
 }
 
-blockquote:before, blockquote:after,
-q:before, q:after {
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
   content: '';
   content: none;
 }
@@ -61,7 +142,7 @@ table {
 }
 
 html {
-  font-family: 'Gilroy',Arial,'Helvetica Neue',Helvetica,sans-serif;
+  font-family: 'Gilroy', Arial, 'Helvetica Neue', Helvetica, sans-serif;
   font-size: 16px;
   line-height: 1.5;
 }
@@ -99,7 +180,7 @@ html {
   border-radius: 4px;
   font-size: 14px;
   color: #555;
-  font-family: 'Gilroy',Arial,'Helvetica Neue',Helvetica,sans-serif;
+  font-family: 'Gilroy', Arial, 'Helvetica Neue', Helvetica, sans-serif;
 }
 
 .navbtn__svg {
@@ -194,11 +275,11 @@ html {
   font-size: 14px;
   background: #3363ab;
   border-radius: 8px;
-  -webkit-transition: opacity .3s ease-out;
-  transition: opacity .3s ease-out;
+  -webkit-transition: opacity 0.3s ease-out;
+  transition: opacity 0.3s ease-out;
   text-align: center;
   font-weight: 300;
-  font-family: 'Gilroy',Arial,'Helvetica Neue',Helvetica,sans-serif;
+  font-family: 'Gilroy', Arial, 'Helvetica Neue', Helvetica, sans-serif;
 }
 
 .btn__input--detail {
@@ -356,7 +437,7 @@ html {
   line-height: 1.4;
   color: #555;
   margin-top: 16px;
-  font-family: 'Gilroy',Arial,'Helvetica Neue',Helvetica,sans-serif;
+  font-family: 'Gilroy', Arial, 'Helvetica Neue', Helvetica, sans-serif;
   cursor: pointer;
 }
 
@@ -383,7 +464,7 @@ html {
   line-height: 1.3;
   text-decoration: none;
   color: #7b7b7b;
-  font-family: 'Gilroy',Arial,'Helvetica Neue',Helvetica,sans-serif;
+  font-family: 'Gilroy', Arial, 'Helvetica Neue', Helvetica, sans-serif;
   margin-top: 14px;
 }
 
@@ -537,12 +618,25 @@ html {
 }
 
 .card__slider {
-  width: 424px;
+  width: 600px;
+}
+
+@media screen and (max-width: 900px) {
+  .card__slider {
+    width: 320px;
+  }
 }
 
 .card__info {
   border-left: 1px solid #e6e6e6;
   padding-left: 24px;
+}
+
+@media screen and (max-width: 900px) {
+  .card__info {
+    border-left: none;
+    margin-top: 40px;
+  }
 }
 
 .card__img-link {
@@ -656,14 +750,14 @@ html {
 
 .card__price-big--old-detail {
   color: #9d9d9d;
-  font-family: Gilroy,Arial,'Helvetica Neue',Helvetica,sans-serif;
+  font-family: Gilroy, Arial, 'Helvetica Neue', Helvetica, sans-serif;
   font-weight: 400;
   font-size: 24px;
 }
 
 .card__price-big--detail {
   color: #111;
-  font-family: Gilroy,Arial,Helvetica Neue,Helvetica,sans-serif;
+  font-family: Gilroy, Arial, Helvetica Neue, Helvetica, sans-serif;
   font-weight: 700;
   font-size: 32px;
 }
@@ -684,7 +778,7 @@ html {
 
 .card__price-small--old-detail {
   color: #9d9d9d;
-  font-family: Gilroy,Arial,'Helvetica Neue',Helvetica,sans-serif;
+  font-family: Gilroy, Arial, 'Helvetica Neue', Helvetica, sans-serif;
   font-weight: 400;
   font-size: 14px;
   position: relative;
@@ -711,14 +805,14 @@ html {
 
 .card__price-icon--old-detail {
   color: #9d9d9d;
-  font-family: Gilroy,Arial,'Helvetica Neue',Helvetica,sans-serif;
+  font-family: Gilroy, Arial, 'Helvetica Neue', Helvetica, sans-serif;
   font-weight: 400;
   font-size: 24px;
 }
 
 .card__price-icon--detail {
   font-size: 30px;
-  font-family: Gilroy,Arial,'Helvetica Neue',Helvetica,sans-serif;
+  font-family: Gilroy, Arial, 'Helvetica Neue', Helvetica, sans-serif;
   font-weight: 400;
 }
 
@@ -851,8 +945,8 @@ html {
   height: 36px;
   padding-left: 16px;
   cursor: pointer;
-  -webkit-transition: all .3s;
-  transition: all .3s;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
 }
 
 .header__form-control:hover {
@@ -914,7 +1008,7 @@ html {
   width: 100%;
   border: none;
   outline: none;
-  font-family: 'Gilroy',Arial,'Helvetica Neue',Helvetica,sans-serif;
+  font-family: 'Gilroy', Arial, 'Helvetica Neue', Helvetica, sans-serif;
   padding-top: 3px;
 }
 
@@ -966,10 +1060,10 @@ html {
   color: #111;
   font-size: 12px;
   font-weight: 500;
-  -webkit-transition: -webkit-transform .5s ease-in-out;
-  transition: -webkit-transform .5s ease-in-out;
-  transition: transform .5s ease-in-out;
-  transition: transform .5s ease-in-out, -webkit-transform .5s ease-in-out;
+  -webkit-transition: -webkit-transform 0.5s ease-in-out;
+  transition: -webkit-transform 0.5s ease-in-out;
+  transition: transform 0.5s ease-in-out;
+  transition: transform 0.5s ease-in-out, -webkit-transform 0.5s ease-in-out;
 }
 
 .header__basket--favorite::after {
@@ -991,13 +1085,13 @@ html {
   margin: 20px 0;
 }
 
-.catalog__slider:hover .owl-theme .owl-nav [class*=owl-] {
+.catalog__slider:hover .owl-theme .owl-nav [class*='owl-'] {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.catalog__slider .owl-theme .owl-nav [class*=owl-] {
+.catalog__slider .owl-theme .owl-nav [class*='owl-'] {
   background: #ffffff;
   color: #003c96;
   font-size: 3.5rem;
@@ -1014,7 +1108,7 @@ html {
           justify-content: center;
 }
 
-.catalog__slider .owl-theme .owl-nav [class*=owl-]:hover {
+.catalog__slider .owl-theme .owl-nav [class*='owl-']:hover {
   background: #99b1d5;
   color: #ffffff;
 }
@@ -1274,6 +1368,18 @@ html {
   padding-left: 0;
 }
 
+@media screen and (max-width: 900px) {
+  .detail__card {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 .detail__card:hover {
   z-index: 0;
   -webkit-box-shadow: none;
@@ -1334,6 +1440,12 @@ html {
   border-radius: 8px;
   margin: 0 auto 25px;
   padding: 44px 46px 36px;
+}
+
+@media screen and (max-width: 500px) {
+  .footer__content {
+    padding: 44px 26px 36px;
+  }
 }
 
 .footer__list {
@@ -1448,8 +1560,8 @@ html {
   border: 1px solid #e6e6e6;
   min-width: 124px;
   max-width: 124px;
-  -webkit-transition: border-color .2s;
-  transition: border-color .2s;
+  -webkit-transition: border-color 0.2s;
+  transition: border-color 0.2s;
 }
 
 .footer__app-btn:hover {
@@ -1491,6 +1603,7 @@ html {
 
 .slider {
   width: 400px;
+  width: 100%;
   position: relative;
 }
 
@@ -1500,7 +1613,19 @@ html {
 
 .bx-wrapper li {
   text-align: center;
-  padding-left: 100px;
+  padding-left: 125px;
+}
+
+@media screen and (max-width: 900px) {
+  .bx-wrapper li {
+    padding-left: 67px;
+  }
+}
+
+@media screen and (max-width: 345px) {
+  .bx-wrapper li {
+    padding-left: 75px;
+  }
 }
 
 .bx-wrapper img {
@@ -1557,6 +1682,18 @@ html {
   padding-top: 11px;
 }
 
+@media screen and (max-width: 900px) {
+  .bx-controls-direction .bx-prev {
+    left: 0px;
+  }
+}
+
+@media screen and (max-width: 345px) {
+  .bx-controls-direction .bx-prev {
+    display: none;
+  }
+}
+
 .bx-controls-direction .bx-prev:hover::after {
   background-color: #007aff;
   color: #fff;
@@ -1569,13 +1706,25 @@ html {
   padding-top: 11px;
 }
 
+@media screen and (max-width: 900px) {
+  .bx-controls-direction .bx-next {
+    right: 0px;
+  }
+}
+
+@media screen and (max-width: 345px) {
+  .bx-controls-direction .bx-next {
+    display: none;
+  }
+}
+
 .bx-controls-direction .bx-next:hover::after {
   background-color: #007aff;
   color: #fff;
 }
 
 .bx-controls-direction .bx-next:after {
-  content: "\203A";
+  content: '\203A';
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1601,7 +1750,7 @@ html {
 }
 
 .bx-controls-direction .bx-prev:after {
-  content: "\2039";
+  content: '\2039';
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
